the final commit

--- a/week-07/day02/prime-squares.html
+++ b/week-07/day02/prime-squares.html
@@ -66,7 +66,13 @@
           // 2: Create a function that adds a 'not-prime' class to a div if it's not a prime and 'prime' if it is
           // 3: Create a timer that keeps calling the prime validatior function until it reaches the end of elements
           //  - the timer should fire every 100ms
-          //  - the timer should stop when there are no more elements left to be colored
+          //  - the timer should stop when there are no more elements left to be colored .then(function (data) {
+//    let gifs = data.result;
+//
+//return gifs.map(function (gifs) {
+  //let img = createNode('img');
+//})
+//})
   </script>
 </body>
 
