--- a/week-08/day02/keyup.html
+++ b/week-08/day02/keyup.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Workshop: EventListeners</title>
-  </head>
-  <body>
-    <h1>No last pressed key</h1>
 
-    <!-- You can work in the html or in a separate js file. Like:
+<head>
+  <meta charset="UTF-8">
+  <title>Workshop: EventListeners</title>
+</head>
+
+<body>
+  <h1>No last pressed key</h1>
+
+  <!-- You can work in the html or in a separate js file. Like:
     <script>
       1) Subscibe to keyup events on the global window object
       2) Console log the event object and peek inside
@@ -15,5 +17,14 @@
     </script>
     OR
     <script src="keyup.js"></script> -->
-  </body>
+  <script> 
+    window.addEventListener('keyup', event => {
+      console.log(event);
+      document.querySelector('h1').innerHTML = event.key + ' ' + event.keyCode
+    })
+
+
+  </script>
+</body>
+
 </html>
