--- a/week-09/exam/index.html
+++ b/week-09/exam/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,19 +8,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- <link rel="stylesheet" type="text/css" media="screen" href="main.css" /> -->
 </head>
+
 <body>
   <div>
     <table border="2">
       <thead>
-      <tr>
-        <th>Name</th>
-        <th>City</th>
-        <th>Price</th>
-        <th>Longtitude</th>
-        <th>Lattitude</th>
-        <th>Category</th>
-        <th>Duration</th>
-        <th>Recommended Age</th>
+        <tr>
+          <th>Name</th>
+          <th>City</th>
+          <th>Price</th>
+          <th>Longtitude</th>
+          <th>Lattitude</th>
+          <th>Category</th>
+          <th>Duration</th>
+          <th>Recommended Age</th>
         </tr>
       </thead>
       <tbody></tbody>
@@ -29,48 +31,57 @@
     <div id="main"></div>
     <div>
       <label>
-        Name: <input type="text" name="attr_name">
+        Name:
+        <input type="text" name="attr_name">
       </label>
     </div>
     <div>
       <label>
-        City: <input type="text" name="city">
+        City:
+        <input type="text" name="city">
       </label>
     </div>
     <div>
       <label>
-        Price: <input type="text" name="price">
+        Category:
+        <input type="text" name="category">
       </label>
     </div>
     <div>
       <label>
-        Longitude: <input type="text" name="longitude">
+        Price:
+        <input type="text" name="price">
       </label>
     </div>
     <div>
       <label>
-        Lattitude: <input type="text" name="lattitude">
+        Longitude:
+        <input type="text" name="longitude">
       </label>
     </div>
     <div>
       <label>
-        Category: <input type="text" name="category">
+        Lattitude:
+        <input type="text" name="lattitude">
       </label>
     </div>
     <div>
       <label>
-        Duration: <input type="text" name="duration">
+        Recommended age:
+        <input type="text" name="recommended_age">
       </label>
     </div>
     <div>
       <label>
-        Recommended age: <input type="text" name="recommended_age">
+        Duration:
+        <input type="text" name="duration">
       </label>
     </div>
     <input class="submitbtn" type="submit" value="Send">
   </form>
   <div>
-</div>
+  </div>
   <script src="./frontend.js"></script>
 </body>
+
 </html>
