example exam finished

--- a/week-09/exam/index.html
+++ b/week-09/exam/index.html
@@ -77,9 +77,12 @@
         <input type="text" name="duration">
       </label>
     </div>
+    <div>
+      <input type="text" name="id" style="visibility: hidden">
+    </div>
     <input class="submitbtn" type="submit" value="Send">
   </form>
-  <div>
+  
   </div>
   <script src="./frontend.js"></script>
 </body>
